--- a/app/src/main/res/layout-v21/activity_display_category.xml
+++ b/app/src/main/res/layout-v21/activity_display_category.xml
@@ -83,6 +83,7 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
+                            android:orientation="horizontal"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1">
