--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content">
 
     <!-- Container to wrap left and right containers to height of right container -->
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,94 +25,114 @@
             android:paddingEnd="30dp"
             android:paddingBottom="5dp">
 
-    <!-- Container for Right Side of layout-->
-            <RelativeLayout
-                android:id="@+id/rightSideLayout"
-                android:layout_alignParentEnd="true"
+            <TextView
+                android:id="@+id/budgetName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/circle_for_header">
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/colorLightText"
+                android:textSize="20sp"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <!-- Container for left side of layout-->
                 <LinearLayout
-                    android:layout_centerInParent="true"
-                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/difference"
-                        android:layout_gravity="center"
+
+
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorLightText"/>
-                    <TextView
-                        android:id="@+id/overUnder"
-                        android:layout_gravity="center"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/projected"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:text="@string/projectedExpenses"
+                            android:textColor="@color/colorLightText"/>
+                        <TextView
+                            android:id="@+id/projectedValue"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorLightText"/>
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorLightText"/>
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/spent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/totalSpent"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorLightText"/>
+                        <TextView
+                            android:id="@+id/spentValue"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorLightText"/>
+                    </LinearLayout>
+
+
 
                 </LinearLayout>
 
 
 
-            </RelativeLayout>
 
 
-    <!-- Container for left side of layout-->
-            <LinearLayout
-                android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/budgetName"
+        <!-- Container for Right Side of layout-->
+                <RelativeLayout
+                    android:id="@+id/rightSideLayout"
+                    android:layout_gravity="end|center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorLightText"/>
+                    android:background="@drawable/circle_for_header">
 
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/projected"
+                    <LinearLayout
+                        android:layout_centerInParent="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/projected"
-                        android:textColor="@color/colorLightText"/>
-                    <TextView
-                        android:id="@+id/projectedValue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorLightText"/>
-                </LinearLayout>
+                        android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/spent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/earned"
-                        android:textColor="@color/colorLightText"/>
-                    <TextView
-                        android:id="@+id/spentValue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorLightText"/>
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/difference"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorLightText"/>
+                        <TextView
+                            android:id="@+id/overUnder"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorLightText"/>
+
+                    </LinearLayout>
 
 
+
+                </RelativeLayout>
 
             </LinearLayout>
 
-        </RelativeLayout>
+
+        </LinearLayout>
+
+
 
         <RelativeLayout
             android:id="@+id/headerLoadingPanel"
