--- a/app/src/main/res/layout/add_new_spending_dialog_layout.xml
+++ b/app/src/main/res/layout/add_new_spending_dialog_layout.xml
@@ -38,9 +38,9 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/spentEarnedAddNewSpendingDialog"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/spent"/>
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
