--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
@@ -13,98 +13,113 @@
 
 
     <!-- Container to wrap left and right containers to height of right container -->
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!-- Container for Right Side of layout-->
-        <RelativeLayout
-            android:id="@+id/rightSideLayoutItemLayout"
-            android:layout_alignParentEnd="true"
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/categoryNameItemLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/circle_for_list_item">
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="Income"/>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <!-- Container for left side of layout-->
             <LinearLayout
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/differenceItemLayout"
-                    android:layout_gravity="center"
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="+$100.00"/>
-                <TextView
-                    android:id="@+id/overUnderItemLayout"
-                    android:layout_gravity="center"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/projectedItemLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="Projected - "/>
+                    <TextView
+                        android:id="@+id/projectedValueItemLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="$2600"/>
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Over"/>
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/spentItemLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="Earned - "/>
+                    <TextView
+                        android:id="@+id/spentValueItemLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="$2700"/>
+                </LinearLayout>
+
+
 
             </LinearLayout>
 
 
 
-        </RelativeLayout>
-
-
-        <!-- Container for left side of layout-->
-        <LinearLayout
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/categoryNameItemLayout"
+            <!-- Container for Right Side of layout-->
+            <RelativeLayout
+                android:id="@+id/rightSideLayoutItemLayout"
+                android:layout_gravity="end|center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Income"/>
+                android:background="@drawable/circle_for_list_item">
 
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/projectedItemLayout"
+                <LinearLayout
+                    android:layout_centerInParent="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Projected - "/>
-                <TextView
-                    android:id="@+id/projectedValueItemLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="$2600"/>
-            </LinearLayout>
+                    android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/spentItemLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Earned - "/>
-                <TextView
-                    android:id="@+id/spentValueItemLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="$2700"/>
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/differenceItemLayout"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="+$100.00"/>
+                    <TextView
+                        android:id="@+id/overUnderItemLayout"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Over"/>
 
+                </LinearLayout>
+
+
+
+            </RelativeLayout>
 
 
         </LinearLayout>
 
-    </RelativeLayout>
-
-
+    </LinearLayout>
 
 
 </RelativeLayout>
