--- a/app/src/main/res/layout-v21/activity_display_income.xml
+++ b/app/src/main/res/layout-v21/activity_display_income.xml
@@ -23,7 +23,7 @@
                 android:clickable="true"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:gravity="left"
+                android:gravity="start"
                 android:background="?android:attr/selectableItemBackgroundBorderless"/>
             <TextView
                 android:id="@+id/categoryDisplayIncome"
