--- a/app/src/main/res/layout/activity_display_category.xml
+++ b/app/src/main/res/layout/activity_display_category.xml
@@ -83,36 +83,45 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="0dp"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1">
+                            >
 
                             <TextView
                                 android:layout_gravity="center_vertical"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textStyle="bold"
                                 android:text="@string/projected"
                                 android:textSize="20sp"
                                 />
 
-                            <TextView
-                                android:layout_gravity="center_vertical"
-                                android:id="@+id/projectedTextViewDisplayCategory"
-                                android:layout_width="wrap_content"
+                            <RelativeLayout
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textSize="20sp"/>
+                                android:orientation="horizontal">
+
+                                <TextView
+
+                                    android:id="@+id/projectedTextViewDisplayCategory"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="20sp" />
+
+                                <ImageView
+                                    android:layout_alignParentEnd="true"
+                                    android:id="@+id/editProjectedDisplayCategory"
+                                    android:layout_width="20dp"
+                                    android:layout_height="20dp"
+                                    android:clickable="true"
+                                    android:src="@drawable/edit_icon"
+                                    android:background="?android:attr/selectableItemBackground"/>
+                            </RelativeLayout>
 
                         </LinearLayout>
 
-                        <ImageView
-                            android:layout_gravity="center_vertical"
-                            android:id="@+id/editProjectedDisplayCategory"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:clickable="true"
-                            android:src="@drawable/edit_icon"
-                            android:background="?android:attr/selectableItemBackground"/>
+
 
 
                     </LinearLayout>
@@ -120,11 +129,12 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="@string/spent"
                             android:textSize="20sp"/>
 
