--- a/app/src/main/res/layout/activity_display_income.xml
+++ b/app/src/main/res/layout/activity_display_income.xml
@@ -4,26 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <LinearLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
-
         <LinearLayout
-
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:orientation="horizontal"
-
-
-            >
-
+            android:orientation="horizontal">
             <ImageView
                 android:id="@+id/backButtonDisplayIncome"
                 android:layout_weight=".5"
@@ -33,10 +23,8 @@
                 android:clickable="true"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:gravity="left"
+                android:gravity="start"
                 android:background="?android:attr/selectableItemBackground"/>
-
-
             <TextView
                 android:id="@+id/categoryDisplayIncome"
                 android:layout_marginStart="10dp"
@@ -49,135 +37,76 @@
                 android:textColor="#FFFFFF"
                 android:typeface="normal"
                 android:textSize="20sp"/>
-
-
         </LinearLayout>
-
-
-
-
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
-
+                android:orientation="vertical">
                 <LinearLayout
                     android:padding="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-
-
-
+                    android:orientation="vertical">
                     <LinearLayout
-
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
-
                         <LinearLayout
                             android:orientation="vertical"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1">
-
                             <TextView
                                 android:layout_gravity="center_vertical"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textStyle="bold"
                                 android:text="@string/projectedExpenses"
-                                android:textSize="20sp"
-                                />
-
+                                android:textSize="20sp" />
                             <TextView
                                 android:layout_gravity="center_vertical"
                                 android:id="@+id/projectedTextViewDisplayIncome"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="20sp"/>
-
                         </LinearLayout>
-
-
-
-
-
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
+                        android:orientation="vertical">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="@string/earned"
                             android:textSize="20sp"/>
-
                         <TextView
                             android:id="@+id/actualDisplayIncome"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:maxLines="2"
                             android:textSize="20sp"/>
-
                     </LinearLayout>
-
                 </LinearLayout>
-
                 <ListView
                     android:id="@+id/listViewDisplayIncome"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"></ListView>
-
-
-
             </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="@drawable/header_shadow">
 
             </RelativeLayout>
-
-
-
-
-
-
         </FrameLayout>
-
-
-
-
-
-
     </LinearLayout>
-
-
     <android.support.design.widget.FloatingActionButton
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="30dp"
@@ -190,7 +119,5 @@
         app:rippleColor="@color/colorCirclePressed"
         app:backgroundTint="@color/colorPrimary"
         android:layout_gravity="bottom|end"
-        android:clickable="true"
-        />
-
+        android:clickable="true" />
 </android.support.design.widget.CoordinatorLayout>
